--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,16 @@
             hover:text-blue-600
 }
 
+.posts-card {
+    @apply flex flex-col rounded-xl w-full 
+            transition duration-300 transform border border-gray-300 
+            hover:scale-105 
+            hover:shadow-lg 
+            dark:border-gray-200/50 
+            dark:hover:shadow-gray-400/40 
+            hover:text-blue-600
+}
+
 h1, h2, h3, h4, h5, h6 {
     @apply text-slate-900 dark:text-white
 }
