--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,11 +6,15 @@
     @apply bg-white dark:bg-slate-800
 }
 
+.container {
+    @apply max-w-4xl px-0 py-5 m-auto
+}
+
 .btn-project {
     @apply inline-flex text-white dark:text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg
 }
 
-.project-card {
+/* .project-card {
     @apply flex flex-col rounded-xl w-full
             transition duration-300 transform border border-gray-300
             hover:scale-105
@@ -19,7 +23,7 @@
             dark:hover:shadow-gray-400/40
 
             hover:text-blue-600
-}
+} */
 
 .posts-card {
     @apply flex flex-col rounded-xl w-full 
